# TCPChat

./: Cargo.toml
client/: Cargo.toml
client/src/: lib.rs  main.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
shared/: Cargo.toml
shared/src/: lib.rs
