[package]
name = "server"
version = "0.1.0"
authors = ["PatriotRossii <patriotrossii2019@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }

bytes = "1"
tokio-serde-cbor = "0"

shared = {path = "../shared"}